--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -13,6 +13,7 @@ sqlalchemy = "^2.0.29"
 psycopg2-binary = "^2.9.9"
 python-decouple = "^3.8"
 black = "^24.3.0"
+cryptography = "^42.0.5"
 
 
 [build-system]
