--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -14,6 +14,7 @@ psycopg2-binary = "^2.9.9"
 python-decouple = "^3.8"
 black = "^24.3.0"
 cryptography = "^42.0.5"
+alembic = "^1.13.1"
 
 
 [build-system]
